tests/snapshots/cli_help__source_advanced_disable_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Disable Lance backend and switch to legacy mode

Usage: mf source advanced disable [OPTIONS]

Options:
      --dry-run          Preview changes without writing
      --root <PATH>      Mind Repo root directory
      --config <PATH>    Config file path
  -v, --verbose...       Verbose output
  -q, --quiet            Silence non-error output
  -o, --output <FORMAT>  Output format [default: text] [possible values: text, json]
      --json             Shorthand for --output json
      --no-color         Disable colored output
  -p, --project <NAME>   Project name for project-scoped operations
  -h, --help             Print help
  -V, --version          Print version
