tests/snapshots/cli_help__source_advanced_enrich_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
List, show, or apply Claude enrichment for shared Source content

Usage: mf source advanced enrich [OPTIONS] <COMMAND>

Commands:
  list   List pending/stale enrichment jobs
  show   Show one bounded chunk batch for a document (for Claude enrichment)
  apply  Apply a validated enrichment JSON to a document

Options:
      --root <PATH>      Mind Repo root directory
      --config <PATH>    Config file path
  -v, --verbose...       Verbose output
  -q, --quiet            Silence non-error output
  -o, --output <FORMAT>  Output format [default: text] [possible values: text, json]
      --json             Shorthand for --output json
      --no-color         Disable colored output
  -p, --project <NAME>   Project name for project-scoped operations
  -h, --help             Print help
  -V, --version          Print version
