tests/snapshots/cli_help__source_advanced_legacy_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Manage legacy compatibility projections

Usage: mf source advanced legacy [OPTIONS] <COMMAND>

Commands:
  status  
  export  
  import  

Options:
      --root <PATH>      Mind Repo root directory
      --config <PATH>    Config file path
  -v, --verbose...       Verbose output
  -q, --quiet            Silence non-error output
  -o, --output <FORMAT>  Output format [default: text] [possible values: text, json]
      --json             Shorthand for --output json
      --no-color         Disable colored output
  -p, --project <NAME>   Project name for project-scoped operations
  -h, --help             Print help
  -V, --version          Print version
