tests/snapshots/cli_help__source_advanced_skill_install_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Install the /mf-source Claude Code Skill into this repo

Usage: mf source advanced skill-install [OPTIONS]

Options:
      --force            Force overwrite of existing conflicting Skill files
      --root <PATH>      Mind Repo root directory
      --config <PATH>    Config file path
      --dry-run          Preview changes without writing
  -v, --verbose...       Verbose output
  -q, --quiet            Silence non-error output
  -o, --output <FORMAT>  Output format [default: text] [possible values: text, json]
      --json             Shorthand for --output json
      --no-color         Disable colored output
  -p, --project <NAME>   Project name for project-scoped operations
  -h, --help             Print help
  -V, --version          Print version
