tests/snapshots/cli_help__source_advanced_status_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Report aggregate status of the advanced Source index

Usage: mf source advanced status [OPTIONS]

Options:
  -p, --project <PROJECT>  
      --root <PATH>        Mind Repo root directory
      --config <PATH>      Config file path
      --source <SOURCE>    
  -v, --verbose...         Verbose output
  -q, --quiet              Silence non-error output
  -o, --output <FORMAT>    Output format [default: text] [possible values: text, json]
      --json               Shorthand for --output json
      --no-color           Disable colored output
  -h, --help               Print help
  -V, --version            Print version
