tests/snapshots/cli_help__source_advanced_sync_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Reconcile content for all or selected Source registrations

Usage: mf source advanced sync [OPTIONS]

Options:
  -p, --project <PROJECT>  Limit sync to a specific project
      --root <PATH>        Mind Repo root directory
      --config <PATH>      Config file path
      --source <SOURCE>    Limit sync to a specific Source identity (requires unambiguous scope)
      --offline            Forbid all network access (Web/RSS acquisition disabled)
  -v, --verbose...         Verbose output
      --dry-run            Preview changes without writing
  -q, --quiet              Silence non-error output
  -o, --output <FORMAT>    Output format [default: text] [possible values: text, json]
      --json               Shorthand for --output json
      --no-color           Disable colored output
  -h, --help               Print help
  -V, --version            Print version
