tests/snapshots/cli_help__source_clean_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Clean source index

Usage: mf source clean [OPTIONS]

Options:
  -n, --dry-run                 Preview changes without writing
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
