tests/snapshots/cli_help__source_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Manage content sources

Usage: mf source [OPTIONS] [COMMAND]

Commands:
  list    List sources [aliases: ls]
  new     Create a source
  update  Update a source
  index   Index sources
  remove  Remove a source [aliases: rm]
  rename  Rename a source
  move    Move a source to another project
  clean   Clean source index
  show    Show source details
  search  Search sources across the repository
  sync    Synchronize sources and article content
  status  Report source corpus status
  export  Export the source corpus
  import  Import a source corpus bundle
  trace   Trace source locations as Markdown links
  admin   Maintain the source corpus

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
